# Deepfake-Detection-System

./: README.md
Face_Detection/: Dockerfile  face_detection.py
NPR_Model/: Dockerfile  detection.py
React_Ui/: App.js
Server/: CMakeLists.txt  server.cpp
